--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ more-itertools==8.0.0
 nbconvert==5.6.1
 nbformat==4.4.0
 notebook==6.0.2
+numpy==1.17.4
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
