--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ opt-einsum==3.1.0
 pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.5.1
+pathlib2==2.3.5
 pexpect==4.7.0
 pickleshare==0.7.5
 prometheus-client==0.7.1
@@ -59,6 +60,7 @@ pyparsing==2.4.5
 pyrsistent==0.15.6
 python-dateutil==2.8.1
 pytz==2019.3
+PyYAML==5.1.2
 pyzmq==18.1.1
 requests==2.22.0
 requests-oauthlib==1.3.0
@@ -67,6 +69,7 @@ Send2Trash==1.5.0
 six==1.13.0
 tensorboard==2.0.2
 tensorflow==2.0.0
+tensorflow-docs==0.0.0
 tensorflow-estimator==2.0.1
 termcolor==1.1.0
 terminado==0.8.3
