--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ opt-einsum==3.1.0
 pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.5.1
+pathlib==1.0.1
 pathlib2==2.3.5
 pexpect==4.7.0
 pickleshare==0.7.5
