--- a/requirements.txt
+++ b/requirements.txt
@@ -21,11 +21,14 @@ importlib-metadata==1.0.0
 ipykernel==5.1.3
 ipython==7.10.0
 ipython-genutils==0.2.0
+ipywidgets==7.5.1
 jedi==0.15.1
 Jinja2==2.10.3
 json5==0.8.5
 jsonschema==3.2.0
+jupyter==1.0.0
 jupyter-client==5.3.4
+jupyter-console==6.0.0
 jupyter-core==4.6.1
 jupyterlab==1.2.3
 jupyterlab-server==1.0.6
@@ -51,7 +54,7 @@ pathlib2==2.3.5
 pexpect==4.7.0
 pickleshare==0.7.5
 prometheus-client==0.7.1
-prompt-toolkit==3.0.2
+prompt-toolkit==2.0.10
 protobuf==3.11.0
 ptyprocess==0.6.0
 pyasn1==0.4.8
@@ -63,6 +66,7 @@ python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.1.2
 pyzmq==18.1.1
+qtconsole==4.6.0
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
@@ -81,5 +85,6 @@ urllib3==1.25.7
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.16.0
+widgetsnbextension==3.5.1
 wrapt==1.11.2
 zipp==0.6.0
