--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,8 @@ qtconsole==4.6.0
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
+scipy==1.3.3
+seaborn==0.9.0
 Send2Trash==1.5.0
 six==1.13.0
 tensorboard==2.0.2
