--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ mistune==0.8.4
 more-itertools==8.0.0
 nbconvert==5.6.1
 nbformat==4.4.0
+nltk==3.4.5
 notebook==6.0.2
 numpy==1.17.4
 oauthlib==3.1.0
@@ -81,6 +82,7 @@ tensorflow-estimator==2.0.1
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
+textblob==0.15.3
 tornado==6.0.3
 traitlets==4.3.3
 urllib3==1.25.7
