--- a/requirements.txt
+++ b/requirements.txt
@@ -63,12 +63,14 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.7
 Pygments==2.5.2
 pyparsing==2.4.5
+Pyphen==0.9.5
 pyrsistent==0.15.6
 python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.1.2
 pyzmq==18.1.1
 qtconsole==4.6.0
+repoze.lru==0.7
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
@@ -84,6 +86,7 @@ termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 textblob==0.15.3
+textstat==0.5.6
 tornado==6.0.3
 traitlets==4.3.3
 urllib3==1.25.7
