--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.15.1
 Jinja2==2.10.3
+joblib==0.14.0
 json5==0.8.5
 jsonschema==3.2.0
 jupyter==1.0.0
@@ -74,10 +75,12 @@ repoze.lru==0.7
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
+scikit-learn==0.21.3
 scipy==1.3.3
 seaborn==0.9.0
 Send2Trash==1.5.0
 six==1.13.0
+sklearn==0.0
 tensorboard==2.0.2
 tensorflow==2.0.0
 tensorflow-docs==0.0.0
